# Engine

./: CMakeLists.txt
assets/shaders/: shader.frag  shader.vert
src/: Application.cpp  Application.h  main.cpp
src/assetManager/: Asset.cpp  Asset.h  AssetLoader.cpp  AssetManager.cpp  AssetManager.h  ShaderAssetLoader.h
src/assetManager/loaders/: ModelAssetLoader.cpp  ModelAssetLoader.h  ShaderAssetLoader.cpp  ShaderAssetLoader.h
src/core/: EngineObject.cpp  EngineObject.h  World.cpp  World.h
src/core/ec/: Entity.cpp  Entity.h  EntityComponent.cpp  EntityComponent.h  WorldComponent.cpp  WorldComponent.h
src/core/ec/components/: CameraComponent.cpp  CameraComponent.h  MeshComponent.cpp  MeshComponent.h  QuadMeshComponent.cpp  QuadMeshComponent.h
src/core/ec/entities/: CameraEntity.cpp  CameraEntity.h  QuadMeshEntity.cpp  QuadMeshEntity.h
src/core/entityComponent/: Entity.cpp  Entity.h  EntityComponent.cpp  EntityComponent.h  WorldComponent.cpp  WorldComponent.h
src/core/entityComponent/components/: CameraComponent.cpp  CameraComponent.h  MeshComponent.h  QuadMeshComponent.cpp  QuadMeshComponent.h
src/core/entityComponent/entities/: CameraEntity.h  QuadMeshEntity.cpp  QuadMeshEntity.h
src/core/fs/: Asset.h  AssetLoader.h  AssetManager.h  ShaderAssetLoader.cpp  ShaderLoader.cpp  ShaderLoader.h
src/log/: Log.cpp  Log.h  Logger.h
src/log/loggers/: ConsoleLogger.cpp  ConsoleLogger.h  FileLogger.cpp  FileLogger.h
src/math/: Matrix4x4.cpp  Matrix4x4.h  Quaternion.cpp  Quaternion.h  Transform.cpp  Transform.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h
src/reflection/: ClassInfo.cpp  ClassInfo.h  ConstructorInfo.cpp  ConstructorInfo.h  FieldInfo.cpp  FieldInfo.h  MethodInfo.cpp  MethodInfo.h  Reflected.cpp  Reflected.h  Reflector.cpp  Reflector.h  TypeInfo.cpp  TypeInfo.h
src/render/: Material.cpp  Material.h  Model.cpp  Model.h  Render.cpp  Render.h  Shader.cpp  Shader.h
src/serialization/: Deserializer.cpp  Deserializer.h  Serializer.cpp  Serializer.h
src/utils/: ForEachMacros.h  Singleton.h
